--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,13 +12,16 @@
     "react/react-in-jsx-scope": 0
   },
   "plugins": ["react", "import", "jsx-a11y"],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module",
+    "requireConfigFile": "false",
     "ecmaFeatures": {
       "jsx": true
     }
   },
+  "babelOptions": { "configFile": "./.babelrc" },
   "env": {
     "es6": true,
     "browser": true,
